# ChaNaSong

./: ChaNaSong.spec  database.db  db.py  main.py  pdf.py  pyproject.toml  widget.py
resource/: database.db
