[tool.poetry]
name = "ChaNaZong"
version = "0.1.0"
description = ""
authors = ["RomRakharb <rom.rakharb@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pyside6 = "^6.5.2"
reportlab = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
